--- a/_config.yml
+++ b/_config.yml
@@ -211,7 +211,7 @@ exclude:
   - _pages/**/teaching.md
 
   - assets/img/flags
-  - assets/img/publication_preview
+#  - assets/img/publication_preview
 
 keep_files:
   - CNAME
@@ -376,7 +376,7 @@ parallel_localization: true
 # 在终端运行：
 #   convert -version
 imagemagick:
-  enabled: true # 启用网站响应式图片（推荐，参考：https://github.com/alshedivat/al-folio/issues/537）
+  enabled: false # 启用网站响应式图片（推荐，参考：https://github.com/alshedivat/al-folio/issues/537）
   widths:
     - 480
     - 800
