--- a/_data/zh-cn/cv.yml
+++ b/_data/zh-cn/cv.yml
@@ -11,17 +11,17 @@
 - title: 工作经历
   type: time_table
   contents:
-    - title: 副教授（校聘）
+    - title: 副研究员（校聘）
       institution: 福州大学
       department: 生物科学与工程学院 生物技术与工程系
       location: 福建 福州
-      year: 2025.11&emsp;&emsp;至今
+      year: 2025.10&emsp;&emsp;至今
       description:
     - title: 讲师
       institution: 福州大学
       department: 生物科学与工程学院 生物技术与工程系
       location: 福建 福州
-      year: 2025.09-2025.11
+      year: 2025.09-2025.10
       description:
 
 - title: 教育经历
