--- a/_data/zh-cn/cv.yml
+++ b/_data/zh-cn/cv.yml
@@ -74,6 +74,11 @@
       year: 2025.10 - 2027.09
       description:
         - 名称：离子交换层析机理建模与工艺优化研究
+        - 编号：XRC-25153
+    - title: 福州大学福建省高校测试中心贵重仪器设备开放测试基金
+      year: 2025.11-2026.10
+      description:
+        - 名称：蛋白药物层析分离S形吸附的跨尺度机理解析
 
 - title: 参与项目
   type: time_table
@@ -93,11 +98,6 @@
       description:
         - 名称：模型辅助的抗体连续分离过程设计和控制新方法研究
         - 编号：22078286
-    - title: 国家自然科学基金面上项目
-      year: 2018.01 - 2021.12
-      description:
-        - 名称：基于定量构效分析的生物分离研究新方法及抗体药物分离
-        - 编号：21878263
 
 #- title: 学术兴趣
 #  type: nested_list
