--- a/_data/zh-cn/cv.yml
+++ b/_data/zh-cn/cv.yml
@@ -98,6 +98,16 @@
       description:
         - 名称：模型辅助的抗体连续分离过程设计和控制新方法研究
         - 编号：22078286
+    - title: 浙江省尖兵领雁研发攻关计划项目
+      year: 2023.01 - 2025.12
+      description:
+        - 名称：抗体药物智能制造关键技术及产业化应用研究项目
+        - 编号：2023C03116
+    - title: 浙江省自然科学基金重点项目
+      year: 2024.01 - 2026.12
+      description:
+        - 名称：糖尿病多肽药物反相层析分离机理及过程优化研究
+        - 编号：LHDMZ24B060001
 
 #- title: 学术兴趣
 #  type: nested_list
