--- a/_data/en-us/cv.yml
+++ b/_data/en-us/cv.yml
@@ -2,7 +2,7 @@
   type: map
   contents:
     - name: Research Interests
-      value: Bioseparation, Biopharmaceuticals, Artificial Intelligence
+      value: Bioseparation, Biopharmaceuticals, Smart Manufacturing
     - name: Email
       value: yu-cheng.chen(at)fzu.edu.cn
     - name: Address
