--- a/_data/zh-cn/cv.yml
+++ b/_data/zh-cn/cv.yml
@@ -2,7 +2,9 @@
   type: map
   contents:
     - name: 研究方向
-      value: 生物分离、生物制药、人工智能
+      value: 生物分离、生物制药、智能制造
+    - name: 所属学科
+      value: 生物工程、生物化工
     - name: 电子邮箱
       value: yu-cheng.chen(at)fzu.edu.cn
     - name: 通讯地址
@@ -45,7 +47,7 @@
       description:
         - 专业：化学工程
         - 学制：1年（国家留学基金委资助）
-        - 研究内容：基于可微分物理求解器的少样本混合模型用于小核酸药物反相层析纯化
+        - 研究课题：基于可微分物理求解器的少样本混合模型用于小核酸药物反相层析纯化
 
     - title: 博士联合培养
       institution: 维也纳自然资源与生命科学大学
@@ -55,7 +57,7 @@
       description:
         - 专业：生物技术
         - 学制：半年（中国科技部资助）
-        - 研究内容：连续病毒过滤过程中的停留时间分布
+        - 研究课题：连续病毒过滤过程中的停留时间分布
 
     - title: 本科学历/工学学士学位
       institution: 厦门大学
@@ -65,7 +67,7 @@
       description:
         - 专业：生物工程（学科评估A-）
         - 学制：4年
-        - 研究内容：三孢布拉氏霉生产 β-胡萝卜的发酵动力学模型构建和优化
+        - 学位论文：三孢布拉氏霉生产 β-胡萝卜的发酵动力学模型构建和优化
 
 - title: 主持项目
   type: time_table
