--- a/_data/zh-cn/strings.yml
+++ b/_data/zh-cn/strings.yml
@@ -82,6 +82,8 @@ cv:
 footer:
   copyright: 版权所有
   last_updated: "最后更新:"
+  today_visit: "今日访问:"
+  total_visit: "总访问:"
 footer_text: > # the ">" symbol means to ignore newlines until "titles:"
   。 基于 <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>
   的 <a href="https://github.com/george-gca/multi-language-al-folio">multi-language-al-folio</a>构建。
